Add "latest" tag to published docker image

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,3 +17,4 @@ jobs:
           repository: ${{ secrets.DOCKER_REPOSITORY }}
           target: app
           tag_with_ref: true
+          tags: latest
