--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,6 +2,8 @@ name: Run CI checks
 on: [ push, pull_request ]
 jobs:
   test:
+    name: Run golang built-in quality tools
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repos
         uses: actions/checkout@v2
