--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -1,4 +1,4 @@
-name: CI checks
+name: Build and test
 on: [ push, pull_request ]
 jobs:
   test:
@@ -13,5 +13,18 @@ jobs:
           go-version: '1.14'
       - name: Run linter
         run: go vet ./...
-      - name: Run the tests
+      - name: Run tests
         run: go test ./...
+
+  build:
+    name: Build the app
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repos
+        uses: actions/checkout@v2
+      - name: Set up golang
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.14'
+      - name: Build
+        run: go build main.go
